--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.6",
     "firebase": "^10.12.4",
     "framer-motion": "^11.1.7",
     "hamburger-react": "^2.5.0",
